[tool.poetry]
name = "sos-game"
version = "0.1.0"
description = ""
authors = ["tas17 <35601762+tas17@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "sos_game"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
numpy = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
